unpackaged/objects/SMS_Credential__mdt.object
<CustomObject>
    <fields>
        <fullName>SMS_LOGIN_ID__c</fullName>
        <label>SMS_LOGIN_ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_PASSWORD__c</fullName>
        <label>SMS_PASSWORD</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_SENDER__c</fullName>
        <label>SMS_SENDER</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMS_URL__c</fullName>
        <label>SMS_URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dlr_mask__c</fullName>
        <label>dlr-mask</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>SMS Credential</label>
    <pluralLabel>SMS Credentials</pluralLabel>
</CustomObject>